# docassemble-MATCMilitaryAffidavit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
MATCMillAffTransfer/: Demo Meeting Notes - Military Affidavit.docx  MATCMilitaryAffidavitTransferDoc.docx  military_affidavit_transfer.docx
docassemble/MATCMilitaryAffidavit/data/questions/: main_military_affidavit.yml  military_affidavit.yml  military_affidavit_standalone.yml  mtc_militaryaffidavit.yml  summary_process.yml
docassemble/MATCMilitaryAffidavit/data/templates/: military_affidavit_next_steps.docx  mtc_militaryaffidavit_next_steps.docx
