license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATCMilitaryAffidavit"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "Suffolk LIT Lab", email = "litlab@suffolk.edu" },
]
dependencies = [
    "docassemble.ALToolbox @ git+https://github.com/SuffolkLITLab/docassemble-ALToolbox.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
